Confirmed that the site-header custom html tag is working. Added jumbrotron to styles.css. Still a work in progress.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>BudgetCents</title>
   <meta name="description" content="A no-frills budgeting web app.">
   <meta name="author" content="Wayne Thompson">
   <meta name="keywords" content="budget personal finance">
@@ -20,22 +19,39 @@
   <link rel="icon" href="/favicon.ico">
   <link rel="icon" href="/favicon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
   -->
+
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="css/styles.css?v=1.0">
+
 
   <script src="js/scripts.js"></script>
   <script type=module src="js/site-htmlElement.js"></script>
+
+  <title>BudgetCents: A Budget That Makes Sense</title>
 </head>
+
+
 
 <body>
     <!-- Custom html header tag code in js/site-htmlElement.js -->
-    <site-header></site-header>
+    <site-header></site-header>    
+
+    
 
     Let's go!!!
 
     <!-- Custom html foot tag code in js/site-htmlElement.js -->
     <site-footer></site-footer>
+
+    <!-- Custom html foot tag code in js/site-htmlElement.js -->
+    <site-scripts></site-scripts>
+
+
 </body>
+
+
 
 </html>
